--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="sort_by_date">Sort by date created</string>
     <string name="hide_completed_tasks">Hide completed tasks</string>
     <string name="delete_completed_tasks">Delete completed tasks</string>
+    <string name="generic_error">Something went wrong.</string>
 </resources>
