--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="hide_completed_tasks">Hide completed tasks</string>
     <string name="delete_completed_tasks">Delete completed tasks</string>
     <string name="generic_error">Something went wrong.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_task">New task</string>
+    <string name="edit_task">Edit task</string>
+    <string name ="task_created">Task is created</string>
+    <string name="task_created_date">Created:</string>
+    <string name="empty_task_error">Name cannot be empty</string>
+    <string name="task_updated">Task is updated</string>
 </resources>
