Add swipe to delete task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="delete_completed_tasks_alert">Do you want to delete all completed tasks?</string>
     <string name="cancel">Cancel</string>
     <string name="delete_confirmation">Delete</string>
+    <string name="delete_single_task">Delete task</string>
+    <string name="undo">Undo</string>
 </resources>
